# gftranslator

./: .gitignore  CMakeLists.txt  README.md  another.asm  another_aesonly.asm  another_keyExpOnly.asm  buff,asm  kernel.asm  kernel_refactored.asm  main  main.cpp  scalar_comb.asm  someasm.asm  someasm2.asm  vector_comb.asm
Combined/: another_keyExpOnly.asm
HeaderFiles/: Assembler  Assembler.hpp  Binstr.hpp  Const.hpp  Iinstr.hpp  InstrIncludes.hpp  Instruction.hpp  Jinstr.hpp  Minstr.hpp  rInstr.hpp
Old/: another.asm
SourceFiles/: Assembler  Assembler.cpp  Binstr.cpp  Iinstr.cpp  Instruction.cpp  Jinstr  Jinstr.cpp  Minstr.cpp  binaries.txt  main  main.cpp  rInstr.cpp
Stimulus/: another_aesonly.asm  another_keyExpOnly.asm  kernel_refactored.asm  vector.asm
